# pytest-playwright-learn-to-code

./: .gitignore  README.md  config.example.py  pyproject.toml  pytest.ini  scripts.py
tests/: __init__.py  conftest.py
tests/interactive_examples/: 01_basics.py  02_data_types.py  03_data_structures.py  04_control_flow.py  05_functions.py  06_oop_basics.py  07_advanced_oop.py  08_modules_and_packages.py  09_file_io.py  10_exceptions_handling.py  11_iterators_and_generators.py  12_decorators_and_context_managers.py  13_advanced_concepts.py  14_standard_library_and_third_party.py  15_pytest_basics.py  16_playwright_integration.py  __init__.py
tests/learn_examples/: __init__.py  test_02_data_types.py  test_08_modules_and_packages.py  test_09_file_io.py  test_advanced_concepts.py  test_advanced_oop.py  test_basics.py  test_data_structures.py  test_decorators_and_context_managers.py  test_functions.py  test_playwright_integration.py  utils.py
tests/test_examples/: test_01_basics.py  test_10_exceptions_handling.py  test_14_standard_library_and_third_party.py  test_login_scope.py  test_unit_only.py
tests/utils/: __init__.py  interactive.py
